<resources>
    <string name="app_name">Vildere Mad</string>

    <string name="logged_in_as">Logged in as %1$s</string>

    <string name="profile_btn">Profile</string>
    <string name="leaderboard_btn">Leaderboard</string>
    <string name="map_btn">Start new route</string>

    <string name="get_users_end_point">https://je0k9wn7ag.execute-api.eu-west-2.amazonaws.com/prod/vilderemad/get-users</string>
    <string name="get_trips_point">https://je0k9wn7ag.execute-api.eu-west-2.amazonaws.com/prod/vilderemad/get-trips</string>
    <string name="add_trip_end_point">https://je0k9wn7ag.execute-api.eu-west-2.amazonaws.com/prod/vilderemad/add-trip</string>
    <string name="add_gps_end_point">https://je0k9wn7ag.execute-api.eu-west-2.amazonaws.com/prod/vilderemad/add-gps-points</string>
    <string name="add_forage_end_point">https://je0k9wn7ag.execute-api.eu-west-2.amazonaws.com/prod/vilderemad/forage-plant</string>
    <string name="get_trip_gps_end_point">https://je0k9wn7ag.execute-api.eu-west-2.amazonaws.com/prod/vilderemad/get-gps-points</string>
    <string name="avatar_bucket_link">https://s3.eu-west-2.amazonaws.com/vilderemad/avatars/avatar</string>
    <string name="level">Level</string>
    <string name="loading">Loading...</string>
    <string name="name">Name</string>
    <string name="leaderboard">Leaderboard</string>

    <string name="activity_changed">activity_changed</string>
    <string name="activity_value">activity_value</string>
    <string name="activity_still">activity_still</string>
    <string name="activity_walking">activity_walking</string>
</resources>
